  procedures
- Minimal updates running against MySQL 8.0 in a 1-tier client-server
  configuration with socket files
- mysql delivery stored procedure: add use of FOR UPDATE and missing ORDER BY
- mysql payment stored procedure: use of of FOR UPDATE and missing c_data
- pgsql: refactor automatic database creation logic to use template1

v0.61.4 (2024-08-12)

- Fix run script but introduced in v0.61.3
- AppImage: add missing libraries for dbt2 binaries
- Add test-connection-scaling script for performance testing example
- AppImage: include PostgreSQL C stored functions, but needs to be manually
  extracted and installed
- pgsql: add pgsql-drop-stored-procs script to remove stored functions

v0.61.3 (2024-08-08)

- Allow tests to run if rsync is not installed, except in cases where the
  primary metric would not be calculated correctly
- Fix district to delivery typos in transaction rate chart
- pgsql: parallelize index creation
- replace semicolons (;) returned from pg_config with spaces in the build
  system, needed with newer pgsql releases
- AppImage: revert linuxdeploy tool updates back to appimagetool
- AppImage: bump touchstone-tools version to v0.9.0
- AppImage: bump dbttools version to v0.5.1
- AppImage: bump psql version to v11.22
- AppImage: fix toml version to 0.2.3
- AppImage: fix docutils version to 0.21.2
- clang-format: never sort include directives

v0.61.2 (2024-04-01)

- Actually check it driver processes have exited, instead of sleeping the
  expected length, before killing client processes

v0.61.1 (2024-03-19)

- Fix post-process unit test for sqlite3
- Remove SAPDB support
- Add --rows-per-commit to `build` script to pass on through to database
  specific scripts to pass to datagen.
- Install python into the AppImage again for easier management of the
  environment and dependencies of python packages
- Fix AppImage use of rst2html5 with manual override of !# in rst2html5 to use
  python in the AppImage environment