@@ -134,6 +134,29 @@ add_custom_target(appimage
                 ../AppDir/usr/bin/spar
                 ../AppDir/usr/bin/sqlite3
                 ../AppDir/usr/bin/toml
+    COMMAND mkdir -p ../AppDir/etc/perl
+                     ../AppDir/etc/perl/Carp
+                     ../AppDir/etc/perl/Exporter
+                     ../AppDir/etc/perl/Getopt
+                     ../AppDir/etc/perl/warnings
+    COMMAND cp -p `find /usr -type f -name Carp.pm | head -n 1`
+                  `find /usr -type f -name Exporter.pm | head -n 1`
+                  `find /usr -type f -name constant.pm | head -n 1`
+                  `find /usr -type f -name open.pm | head -n 1`
+                  `find /usr -type f -name overload.pm | head -n 1`
+                  `find /usr -type f -name overloading.pm | head -n 1`
+                  `find /usr -type f -name strict.pm | head -n 1`
+                  `find /usr -type f -name vars.pm | head -n 1`
+                  `find /usr -type f -name warnings.pm | head -n 1`
+               ../AppDir/etc/perl/
+    COMMAND cp -p `find /usr -type f -name Heavy.pm | grep Carp | head -n 1`
+               ../AppDir/etc/perl/Carp/
+    COMMAND cp -p `find /usr -type f -name Heavy.pm | grep Exporter | head -n 1`
+               ../AppDir/etc/perl/Exporter/
+    COMMAND cp -p `find /usr -type f -name Long.pm | grep Getopt | head -n 1`
+               ../AppDir/etc/perl/Getopt/
+    COMMAND cp -p `find /usr -type f -name register.pm | grep warnings | head -n 1`
+               ../AppDir/etc/perl/warnings/
     COMMAND sed -i "1s/.*/#!\\\\/usr\\\\/bin\\\\/env python3/"
             ../AppDir/usr/bin/rst2html5
     COMMAND cp -p `command -v dbt-plot`
@@ -163,6 +186,12 @@ add_custom_target(appimage
             https://raw.githubusercontent.com/brendangregg/FlameGraph/master/flamegraph.pl
     COMMAND chmod +x ../AppDir/usr/bin/stackcollapse-perf.pl
             ../AppDir/usr/bin/flamegraph.pl
+    COMMAND sed -i "1s/.*/#!\\\\/usr\\\\/bin\\\\/env perl/"
+                ../AppDir/usr/bin/flamegraph.pl
+                ../AppDir/usr/bin/stackcollapse-perf.pl
+    COMMAND mkdir -p ../AppDir/usr/share/licenses/FlameGraph
+    COMMAND curl -o ../AppDir/usr/share/licenses/FlameGraph/cddl1.txt -SsOL
+            https://raw.githubusercontent.com/brendangregg/FlameGraph/master/docs/cddl1.txt
     COMMAND mkdir -p ../AppDir/usr/lib/
     COMMAND cp -paL
                `ldd ${DRIVER3} | grep libev\\\\\\\\. | cut -d \" \" -f 3`
