@@ -106,6 +106,11 @@ RUN mkdir -p \
     cp -p /usr/share/doc/libpixman-1-0/copyright \
        /usr/local/share/licenses/pixman-$(dpkg-query -W -f='${Version}\n' libpixman-1-0)/
 
+RUN mkdir -p \
+          /usr/local/share/licenses/perl-$(dpkg-query -W -f='${Version}\n' perl) && \
+    cp -p /usr/share/doc/perl/copyright \
+       /usr/local/share/licenses/perl-$(dpkg-query -W -f='${Version}\n' perl)/
+
 ARG LIBNSLVER="1.3.0"
 RUN curl -o /tmp/libnsl-${LIBNSLVER}.tar.xz  -SsOL \
          https://github.com/thkukuk/libnsl/releases/download/v${LIBNSLVER}/libnsl-${LIBNSLVER}.tar.xz && \
